--- a/src/components/RestaurantDetails/RestaurantDetails.css
+++ b/src/components/RestaurantDetails/RestaurantDetails.css
@@ -3,6 +3,9 @@
   flex-direction: column;
   margin: 20px;
 }
+.restaurent-wrap{
+  display: flex;
+}
 
 .restaurant-image {
   max-width: 100%;
@@ -13,7 +16,7 @@
 .restaurant-info {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 50%;
   margin-left: auto;
 }
 
@@ -22,6 +25,8 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  margin-left: 60%;
+  
 }
 
 .restaurant-title {
@@ -32,6 +37,7 @@
 
 .restaurant-description {
   margin-bottom: 10px;
+  
 }
 
 .restaurant-location,
@@ -51,7 +57,29 @@
   margin-right: 10px;
   color: black;
 }
+.img-rest{
+  object-fit: cover;
+}
+.restaurant-description-title{
+  text-align: center;
+  width: 50%;
+}
+.restaurant-line {
+  width: 100%;
+  height: 2px;
+  background-color: #000;
+  margin-top: 5px;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
 
+.restaurant-description-title:hover .restaurant-line {
+  transform: scaleX(1);
+}
+.schedual-button{
+  border:none !important;
+  font-size: 15px;
+}
 @media only screen and (max-width: 768px) {
   .restaurant-container {
     flex-direction: column;
@@ -59,7 +87,11 @@
 
   .restaurant-details-image {
     margin-bottom: 20px;
+    
   }
+ img .img-rest {
+  width: 100%;
+ }
 
   .restaurant-details-info {
     margin: 0;
@@ -67,30 +99,46 @@
   }
 }
 
-@media only screen and (max-width: 480px) {
+/* Small screens (up to 576px) */
+@media (max-width: 576px) {
   .restaurant-container {
-    padding: 0 20px;
+    margin: 10px;
   }
-  
-  .restaurant-details-image {
-    margin-bottom: 20px;
+  .restaurant-info {
+    width: 100%;
+    margin-left: 0;
+  }
+  .restaurant-details {
+    margin-left: 0;
+  }
+  .restaurant-title {
+    font-size: 20px;
+  }
+  .restaurant-description-title {
     width: 100%;
   }
-
-  .restaurant-details-info {
-    width: 100%;
+  .restaurant-social-media {
+    flex-wrap: wrap;
   }
 }
 
-@media only screen and (max-width: 375px) {
-  .restaurant-details-image {
-    margin-bottom: 10px;
+/* Medium screens (up to 768px) */
+@media (max-width: 768px) {
+  .restaurant-info {
+    width: 70%;
   }
 }
-.days-of-week_resto{
-  display: flex;
-  flex-direction: row;
+
+/* Large screens (up to 992px) */
+@media (max-width: 992px) {
+  .restaurant-info {
+    width: 60%;
+  }
 }
-.days-of-week_resto>h4:first-child{
-  margin-right: 10px;
+
+/* Extra large screens (up to 1200px) */
+@media (max-width: 1200px) {
+  .restaurant-info {
+    width: 50%;
+  }
 }
