--- a/src/pages/eventPage/event.css
+++ b/src/pages/eventPage/event.css
@@ -1,210 +1,125 @@
-html,
-body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-.event__wrapper {
-  box-sizing: content-box;
-  max-width: 100vw;
-  height: 100%;
-  /* border: 4px solid red; */
-}
-
-.event__wrapper__contain {
-  display: flex;
-  max-width: 100%;
-  height: 100%;
-  /* border: 3px solid green; */
-}
-
-.event__social {
-  width: 30%;
-  height: 100%;
-  /* border: 2px solid peru; */
-  display: flex;
-  align-content: flex-start;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: nowrap;
-  gap: 10%;
-}
-
-.event__content {
-  width: 60%;
-  height: 100%;
-  display: flex;
-  /* border: 2px solid rgb(60, 7, 206); */
-  flex-direction: column;
-  justify-content: flex-start;
-  flex-wrap: nowrap;
-  gap: 10%;
-}
-
-.event__img {
-  width: 80%;
-  margin-top: 10%;
-}
-.event__img > img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.event__media {
-  width: 80%;
-  display: flex;
-  grid-row-gap: 10px;
-  flex-direction: column;
-}
-
-.event__media div {
-  width: 100%;
-  height: 40px;
-}
-
-.social__link {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  gap: 25px;
-}
-.social__logo {
-  height: 100%;
-
-  width: 30% !important;
-  background-color: rgb(58, 122, 5);
-}
-
-.social__content {
-  gap: 10px;
-  width: 70% !important;
-  background-color: rgb(58, 122, 5);
-  color: beige;
-  font: 1em sans-serif;
-  text-align: -webkit-center;
-  /* background-color: blue; */
-}
-.event__info {
-  display: flex;
-  width: 100%;
-  height: 20%;
-  /* background-color: brown; */
-  justify-content: center;
-  align-content: center;
-  align-items: flex-start;
-  flex-wrap: nowrap;
-  gap: inherit;
-}
-.event__title {
-  padding-top: 5%;
-  font-size: 1.5em;
-}
-.event__time {
-  border-right: 0.5px solid rgba(190, 169, 169, 0.411);
-  padding-right: 10%;
-}
-
-.w-full {
-  width: 100%;
-}
-.break-words {
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-}
-.font-bold {
-  font-weight: bold;
-}
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-.mt-5 {
-  margin-top: 1.25rem;
-}
-.grid {
+.event-wrapper {
+  padding: 40px 20px;
   display: grid;
-}
-.grid-flow-row {
-  grid-auto-flow: row;
-}
-.gap-0 {
-  gap: 0;
-}
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-.border-b {
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-}
-.border-gray-400 {
-  border-color: #cbd5e0;
-}
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  grid-template-columns: repeat(9, 1fr);
+  grid-column-gap: 30px;
+  grid-row-gap: 0px;
+  min-height:70vh;
 }
 
-@media only screen and (max-width: 460px) {
-  .event__wrapper__contain {
-    display: flex;
-    max-width: 100%;
-    height: 100%;
-    /* border: 3px solid green; */
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-
-
-  .social__content {
-    display: none;
-  }
-
-  .event__media {
-    width: 100%;
-    display: flex;
-    position: absolute;
-    flex-direction: row;
-    background-color: green;
-    /* flex-wrap: nowrap; */
-    /* justify-content: flex-start; */
-    position: fixed;
-    top: 0;
+.event-social {
+  grid-column: 1/3;
 }
-.event__img > img {
-  width: 400px;
-  height: 300px;
-  object-fit: cover;
-  position: relative;
-  right: 5%;
-  /* left: 50%; */
+
+.event-content {
+  grid-column: 3/10;
 }
-.social__link {
+
+.event-img img {
+  border-radius: 3px;
+  margin-bottom: 20px;
   width: 100%;
-  height: 100%;
+  height: auto;
+}
+
+.social-link {
   display: flex;
-  gap: 25px;
-  justify-content: center;
   align-items: center;
-}
-.event__social {
+  margin-bottom: 10px;
   width: 100%;
-  height: 100%;
-  /* border: 2px solid peru; */
-  display: flex;
-  align-content: center;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: self-end;
-  flex-wrap: wrap;
-  gap: 10%;
+  border-radius: 3px;
+  background-color: var(--primary-derv);
 }
+.social-link > a {
+  width: calc(100% - 50px);
+  text-align: center;
+
+  color: white;
+  text-decoration: none;
+}
+
+.social-link svg {
+  background-color: var(--accent);
+  padding: 5px;
+  color: white;
+  width: 40px;
+  height: 40px;
+  border-radius: 3px;
+}
+
+.event-title {
+  color:var(--black);
+  margin-top: 0;
+  font-size: 2rem;
+  font-weight: 900;
+  margin-bottom: 20px;
+}
+
+.event-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 20px;
+  margin: 50px 0;
+}
+.event-grid>*:first-child{
+  border-right: 3px solid grey;
+}
+
+.event-grid-item {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.event-grid-item>svg{
+  margin-bottom:20px;
+  font-weight: 300;
+}
+.event-tags {
+  margin: 20px 0;
+}
+
+.event-tag {
+  display: inline-block;
+  padding: 6px 12px;
+  background-color: #eaeaea;
+  color: #333;
+  font-size: 14px;
+  border-radius: 4px;
+  margin-right: 10px;
+}
+
+.event-tag:last-child {
+  margin-right: 0;
+}
+
+
+.event-grid-item svg {
+  fill: black;
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+}
+
+.event-grid-item div {
+  font-size: 14px;
+}
+
+.event-content-text {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.event-to-remember-title {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.event-to-remember-item {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+}
+
+.event-to-remember-item div:first-child {
+  margin-right: 10px;
 }
