--- a/src/pages/home/fourCardsSlider.css
+++ b/src/pages/home/fourCardsSlider.css
@@ -13,10 +13,13 @@
   .carde {
     margin-right: 20px;
   }
-  /* .carde .restaurant {
-    width:100%;
-  } */
-  
+  .carde .restaurant {
+    width:320px!important;
+  }
+  .carde .restaurant .infos_left .block_infos .description_block p{
+    -webkit-line-clamp:1;
+    width :320px;
+  }
   .slider-prev,
   .slider-next {
     position: absolute!important;
