--- a/src/components/RestaurantDetails/RestaurantDetails.css
+++ b/src/components/RestaurantDetails/RestaurantDetails.css
@@ -86,8 +86,8 @@
   object-fit: cover;
 } */
 img.img-rest {
-  height: 195px;
-  width: 100%;
+  height: 300px;
+  width: 400px;
   object-fit: cover;
 }
 @media (max-width: 576px) {
