--- a/src/components/listingcardEvent/card/card.css
+++ b/src/components/listingcardEvent/card/card.css
@@ -6,6 +6,14 @@
   background-color: rgb(255, 255, 255);
   font-family: sans-serif;
 }
+.event__info__loc .adress{
+    text-overflow: ellipsis;
+    width: 240px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
 
 .event__content {
   margin-top: 1rem;
@@ -47,8 +55,11 @@
   line-height: 1.35rem;
   font-weight: 600;
   padding-bottom: 5px;
-  padding-top: 14px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
+
 
 .event__description {
   line-height: 1.375;
@@ -72,6 +83,7 @@ a {
   padding: 2px 10px;
   border-radius: 5px;
   display: flex;
+  flex-direction: column;
   
 }
 .event__info__loc{
