--- a/src/components/header2/header.css
+++ b/src/components/header2/header.css
@@ -83,7 +83,7 @@
 .header--desktop .dropdown-content {
   border-radius: 5px;
   position: absolute;
-  background-color: var(--accent);
+  background-color: var(--primary-derv);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 999;
@@ -183,13 +183,13 @@
   align-items: center;
 }
 .dropdown-label{
+
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    align-items: center;
 }
-.header--desktop .middle--header_container a{
-    position: absolute;
-    right: 7%;
+.header--desktop .mapped-link-container>a{
     top: calc(50% - 6px);
     padding: 5px 10px;
     border: 1px solid var(--accent);
@@ -197,7 +197,7 @@
     color: var(--secondary);
 
     }
-.header--desktop .middle--header_container a:hover{
+.header--desktop .mapped-link-container a:hover{
     background-color: var(--accent-derv);
     color: var(--secondary);
     transition: .4s ease-in-out
@@ -266,8 +266,7 @@
   .mobile-menu-links a {
     display: block;
     color: var(--secondary);
-    padding: 10px;
-    text-decoration: none;
+      text-decoration: none;
   }
 
   .mobile-menu-social {
@@ -310,7 +309,7 @@
     top: 100%;
     left: 0;
     width: 100%;
-    background-color: var(--accent);
+    background-color: var(--primary-derv);
     border-radius: 5px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 999;
