--- a/src/components/listingcard/listingCard.css
+++ b/src/components/listingcard/listingCard.css
@@ -1,7 +1,7 @@
-.card--listing_container{
-    padding:1%
+.card--listing_container2{
+  padding: 50px 9%
 }
-.card--listing {
+.card--listing2 {
   padding-bottom: 50px;
   display: flex;
   -webkit-box-orient: horizontal;
@@ -9,9 +9,9 @@
   flex-flow: row wrap;
   max-width: 100%;
   gap:20px;
-  justify-content: space-around;
+  justify-content: space-between;
 }
-.card--listing_title {
+.card--listing_title2 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
