--- a/src/components/header2/header.css
+++ b/src/components/header2/header.css
@@ -72,7 +72,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
+  padding:0  10px ;
 }
 
 .header--desktop .mapped-link-wrapper {
@@ -126,7 +126,7 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 2px;
+  height: 4px;
   background-color: var(--secondary);
   transform: scaleX(0);
   transition: transform 0.3s;
@@ -187,6 +187,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: center;
+  padding: 10px 0;
 }
 .header--desktop .mapped-link-container > a:last-child {
   top: calc(50% - 6px);
