--- a/src/pages/listing/cards.css
+++ b/src/pages/listing/cards.css
@@ -23,15 +23,17 @@ a.btn:active {
   transition: all 0.025s 0s ease-out;
 }
 div.cards {
+  display: flex;
   margin: 80px auto;
-  max-width: 960px;
-  text-align: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  
 }
 div.card {
   background: #ffffff;
   display: inline-block;
   margin: 8px;
-  max-width: 300px;
+  max-width: 270px;
   perspective: 1000;
   position: relative;
   text-align: left;
@@ -40,7 +42,7 @@ div.card {
   z-index: 1;
 }
 div.card img {
-  max-width: 300px;
+  max-width: 270px;
 }
 div.card .card__image-holder {
   background: rgba(0, 0, 0, 0.1);
