--- a/src/components/header2/header.css
+++ b/src/components/header2/header.css
@@ -70,9 +70,9 @@
 .header--desktop .mapped-link-container {
   font-size: 1.2rem;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  padding:0  10px ;
+  padding: 0 9%;
 }
 
 .header--desktop .mapped-link-wrapper {
