--- a/src/components/listingcard/card/card.css
+++ b/src/components/listingcard/card/card.css
@@ -5,7 +5,7 @@ ul {
 
 .restaurant {
   position: relative;
-  width: 378px;
+  width: 260px;
   height: 400px;
   cursor: pointer;
   margin-bottom: 20px;
@@ -44,7 +44,6 @@ ul {
   width: 100%;
   height: 70%;
   background-size: cover;
-  background-size: 100%;
   background-position: center;
   transition: background-size 0.5s;
 }
@@ -99,9 +98,11 @@ ul {
 
 .restaurant .infos_left .block_infos .adress_block {
   text-align: right;
-  margin: 10px 5px;
+  margin: 0px 5px;
   color: rgba(0, 0, 0, 0.5);
   text-transform: capitalize;
+  display: flex;
+  flex-direction: column;
 }
 
 .restaurant .infos_left .block_infos .adress_block svg {
@@ -112,11 +113,12 @@ ul {
 .restaurant .infos_left .block_infos .adress_block .adress {
   font-size: 12px;
   text-overflow: ellipsis;
-  max-width: 176px;
+  max-width: 270px;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
   white-space: pre-wrap;
   overflow: hidden;
+  text-align: left;
   }
 
   
@@ -133,7 +135,7 @@ ul {
   color: rgba(0, 0, 0, 0.8);
   max-height: 72px;
   text-overflow: ellipsis;
-  width: 376px;
+  width: 260px;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
@@ -172,13 +174,4 @@ ul {
   background: white !important;
   border: none !important;
   text-align: center !important;
-}
-@media (max-width: 800px) {
-  .restaurant {
-    width: 300px;
-  }
-.restaurant .infos_left .block_infos .description_block p {
-	width: 290px;
-
-}
 }
