--- a/src/components/listingcard/listingCard.css
+++ b/src/components/listingcard/listingCard.css
@@ -1,16 +1,7 @@
 .card--listing_container2{
-  padding: 50px 9%
+width: 100%;
 }
-.card--listing2 {
-  padding-bottom: 50px;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  flex-flow: row wrap;
-  max-width: 100%;
-  gap:20px;
-  justify-content: space-between;
-}
+
 .card--listing_title2 {
   display: flex;
   flex-direction: row;
