--- a/src/components/listingcardEvent/listingCard.css
+++ b/src/components/listingcardEvent/listingCard.css
@@ -1,16 +1,38 @@
 .card--listing_container{
-    padding:1%
+  width: 100%; 
 }
 .card--listing {
   padding-bottom: 50px;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  flex-flow: row wrap;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
   max-width: 100%;
-  gap:20px;
-  justify-content: space-between;
+  column-gap: calc(33% - 360px);
+  row-gap: 20px;
 }
+@media (max-width:1200px){
+.card--listing {
+  grid-template-columns: repeat(3,1fr);
+  column-gap: calc(50% - 405px);
+
+}
+
+}
+@media (max-width:900px){
+  .card--listing {
+    grid-template-columns: repeat(2,1fr);
+    column-gap: calc(100% - 540px);
+  
+  }
+  
+  }
+  @media (max-width:600px){
+    .card--listing {
+      grid-template-columns: repeat(1,1fr);
+      justify-items: center;
+      column-gap: 0;
+    }
+    
+    }
 .card--listing_title {
   display: flex;
   flex-direction: row;
