--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
 } */
 :root {
   --primary: #297d4b;        
-  --primary-derv: #56a77b;   
+  --primary-derv: #2d533d;   
   --secondary: #FFFFFF;      
   --secondary-derv: #F2F2F2; 
   --accent: #cc0000;         
