--- a/src/pages/listing/listing.css
+++ b/src/pages/listing/listing.css
@@ -1,4 +1,42 @@
+.blog--listing-container{
+  display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    place-content: space-between flex-start;
+    padding: 50px 9%;
+}
 
+.cards-mapper {
+  padding-bottom: 50px;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  max-width: 100%;
+  column-gap: calc(33% - 400px);
+  row-gap: 20px;
+}
+@media (max-width:1200px){
+  .cards-mapper {
+    grid-template-columns: repeat(3,1fr);
+    column-gap: calc(50% - 405px);
+  
+  }
+  
+  }
+  @media (max-width:900px){
+    .cards-mapper {
+      grid-template-columns: repeat(2,1fr);
+      column-gap: calc(33% - 540px);
+      justify-items: center;
+    }
+    
+    }
+    @media (max-width:600px){
+      .cards-mapper {
+        grid-template-columns: repeat(1,1fr);
+        column-gap: 0;
+      }
+      
+      }
 .add-listing_wrapper h1{
     font-size: 2.5rem;
     font-family: 'Montserrat';
